bridge/base/ai-assistant-deployment.yaml
#! ai-assistant-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ai-assistant
    namespace: doan-ptdl
    labels:
        com.docker.compose.project: doan_ptdl
        com.docker.compose.service: ai-assistant
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: doan_ptdl
            com.docker.compose.service: ai-assistant
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: doan_ptdl
                com.docker.compose.service: ai-assistant
                com.docker.compose.network.ai-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: ai-assistant
                  image: doan_ptdl-ai-assistant
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:8000/docs']
                    periodSeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: ai-assista-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: secrets-service-account-json
                      mountPath: /secrets/service_account.json
                      readOnly: true
            volumes:
                - name: secrets-service-account-json
                  hostPath:
                    path: C:\Users\PC\Desktop\Doan_PTDL\secrets\service_account.json
                  readOnly: true
