bridge/base/n8n-deployment.yaml
#! n8n-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: n8n
    namespace: doan-ptdl
    labels:
        com.docker.compose.project: doan_ptdl
        com.docker.compose.service: n8n
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: doan_ptdl
            com.docker.compose.service: n8n
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: doan_ptdl
                com.docker.compose.service: n8n
                com.docker.compose.network.ai-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: n8n
                  image: n8nio/n8n:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: n8n-5678
                      containerPort: 5678
                  volumeMounts:
                    - name: home-node--n8n
                      mountPath: /home/node/.n8n
                    - name: home-node--n8n-workflows
                      mountPath: /home/node/.n8n/workflows
            volumes:
                - name: home-node--n8n
                  persistentVolumeClaim:
                    claimName: n8n-n8n-data
                - name: home-node--n8n-workflows
                  hostPath:
                    path: C:\Users\PC\Desktop\Doan_PTDL\n8n-workflows
