bridge/base/n8n-service.yaml
#! n8n-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: n8n-published
    namespace: doan-ptdl
    labels:
        com.docker.compose.project: doan_ptdl
        com.docker.compose.service: n8n
spec:
    selector:
        com.docker.compose.project: doan_ptdl
        com.docker.compose.service: n8n
    ports:
        - name: n8n-5678
          port: 5678
          protocol: TCP
          targetPort: n8n-5678
