bridge/base/ai-network-network-policy.yaml
#! ai-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: ai-network-network-policy
    namespace: doan-ptdl
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.ai-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.ai-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.ai-network: "true"
